--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dependencies": {
         "express": "2.5.x",
         "jade": "0.26.x",
-        "pg": "0.7.x"
+        "mongoose": "2.6.x"
     },
     "engines": {
         "node": "0.6.x"
